Fixed the bug of temp not showing in some cases due to incorrect grid template row sizing

--- a/search.css
+++ b/search.css
@@ -127,7 +127,7 @@ body {
     font-size: 40px;
     display: grid;
     justify-content: center;
-    grid-template-rows: 2fr 1fr 2fr;
+    grid-template-rows: 1fr 1fr 2fr;
     height: 100%;
 }
 
@@ -194,4 +194,21 @@ body {
     background-color: black;
     z-index: 2;
     display: none;
+}
+
+.error-screen {
+    position: absolute;
+    height: 100vh;
+    width: 100%;
+    background-color: red;
+    z-index: 2;
+    display: none;
+}
+
+.show {
+    display: block !important;
+}
+
+.weather-type {
+    text-align: center;
 }
